MGS-1556 BUGFIX Breadcrumbs arrow now wraps alongside text.

--- a/src/scss/components/_component.breadcrumbs.scss
+++ b/src/scss/components/_component.breadcrumbs.scss
@@ -14,17 +14,15 @@
     display: inline;
     margin-bottom: 0;
     margin-left: 0px;
-
-    &:after {
-      content: '>';
-      padding: 0 3px;
-      color: $color__grey--medium;
-    }
   }
-
 
   &__link {
     text-decoration: none;
+    &:after {
+      content: '>';
+      padding: 0 3px 0 6px;
+      color: $color__grey--medium;
+    }
   }
 }
 
